# script_check_programming_language

./: Cargo.toml  README.md  erl_crash.dump  main.sh
.github/workflows/: release.yml
Formula/: langscan.rb
src/: main.rs
src/models/: mod.rs
src/scanner/: mod.rs
workflows/: release.yml
