[package]
name = "langscan"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.2"
chrono = "0.4.39"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
which = "8.0.0"
